# jellyfin-apiclient-python

./: .gitignore  CLAUDE.md  Pipfile  README.md  openapi-python-client.yaml  pyproject.toml  regenerate_api.sh  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/source/manual/: migration_guide.rst  new_openapi_client_docs.rst
jellyfin_apiclient_python/: __init__.py  api.py  async_api.py  async_http.py  async_runner.py  client.py  configuration.py  connection_manager.py  constants.py  credentials.py  http.py  httpx_compat.py  keepalive.py  media_graph.py  timesync_manager.py  types.py  util.py  ws_client.py
jellyfin_apiclient_python/demo/: __init__.py  demo_jellyfin_server.py
jellyfin_apiclient_python/mixins/: playlists.py
jellyfin_apiclient_python/openapi/: __init__.py  client.py  compat.py
jellyfin_apiclient_python/openapi/_generated/: __init__.py
jellyfin_apiclient_python/openapi/_generated/models/: __init__.py  access_schedule.py  activity_log_entry.py  activity_log_entry_message.py  activity_log_entry_query_result.py  activity_log_entry_start_message.py  activity_log_entry_stop_message.py  add_virtual_folder_dto.py  album_info.py  all_theme_media_result.py  (+437 more)
tests/: test_api.py  test_async_client.py  test_connection_manager.py  test_credentials.py  test_openapi_client_wrapper.py
tests_integration/: create_instance.py  integration_test.py
tests_integration/config/: .gitignore
tests_integration/config/config/: encoding.xml  migrations.xml  network.xml  system.xml
tests_integration/config/data/: device.txt  jellyfin.db  library.db
(+358 files in other folders)
